# ranking-challenge-perspective

./: .gitignore  Dockerfile.perspective  README.md  caller.py  docker-compose.yml  performance_test.ipynb  perspective_ranker.py  perspective_ranker_test.py  pyproject.toml  requirements.txt  sample-request.json  single-request.py
.github/workflows/: pytest.yaml
jigsaw_ranker/: caller.py  perspective_ranker.py  perspective_ranker_test.py  ranking_server_test.py  sample_data.py  test.py
