[tool.poetry]
authors = [
    "James Clark <jamesclark2709@gmail.com>",
    "Haroon Iftikhar <hiftikha@umich.edu>",
]
package-mode = false
name = "ranking-challenge-perspective"
version = "0.1.1"
description = "Ranker based on Perspective API scores."

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.112.0"
uvicorn = "^0.30.0"
google-api-python-client = "^2.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.0"
pydantic = ">=2.6.0"
httpx = "^0.27.0"
faker = "^27.0.0"
ranking-challenge = "^3.2.8"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
respx = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
